--- a/src/main/resources/templates/products/blocks/header.html
+++ b/src/main/resources/templates/products/blocks/header.html
@@ -1,7 +1,7 @@
 <div th:fragment="header" xmlns="http://www.w3.org/1999/html">
   <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
     <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-      <img src="/images/logo.jpeg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Croco</title><path fill-rule="evenodd" clip-rule="evenodd" ></path></img>
+      <img src="/static/images/logo.jpeg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Croco</title><path fill-rule="evenodd" clip-rule="evenodd" ></path></img>
       <span class="fs-4">Croco</span>
     </a>
 
@@ -9,7 +9,7 @@
       <a class="me-3 py-2 link-body-emphasis " href="/">home</a>
       <a class="me-3 py-2 link-body-emphasis " href="/brands">brands</a>
       <a href="/basket" class="d-flex align-items-center link-body-emphasis ">
-        <img src="/images/Basket.jpeg" width="40" height="32" class="me-2">
+        <img src="/static/images/Basket.jpeg" width="40" height="32" class="me-2">
       </a>
 
     </nav>
