--- a/src/main/resources/templates/products/index.html
+++ b/src/main/resources/templates/products/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
-    <title th:text="${title}"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">/>
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
@@ -26,8 +25,9 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="products : ${products}">
+        <tr th:each="product : ${products}">
             <td th:text="${product.id}"/>
+
             <td th:text="${product.name}"/>
             <td th:text="${product.brand}"/>
             <td th:text="${product.category}"/>
@@ -38,8 +38,7 @@
             <td/>
             <td th:text="${product.createdAt.toString().subString(0, 10)}"/>
             <td style="white-space:nowrap">
-                <a class="btn-primary btn-sm"
-                   th:href="@{/poducts/edit (id=${product.id})}">Edit</a>
+                <a class="btn-primary btn-sm" th:href="@{/products/edit(id=${product.id})}">Edit</a>
                 <a class="btn-danger btn-sm"
                    th:href="@{/products/delete (id=${product.id})}"
                    onclick="return confirm('Are you sure?')">Delete</a>
